# friendly_module_not_found_error

./: .gitignore  CMakeLists.txt  LICENSE  README.md  find_all_packages.c  find_all_packages.cpp  find_all_packages.h  find_all_packages.py  friendly_module_not_found_error.pth  hatch_autorun_friendly_module_not_found_error.pth  pyproject.toml  setup.py  traceback-3.12-final.py  traceback-3.12-with-find.py  traceback-3.13-final.py  traceback-3.13-with-find.py  traceback-3.14-final.py  traceback-3.14-with-find.py  traceback-3.15-final.py  traceback-3.15-with-find.py  traceback-change.py
.github/workflows/: test.yml
friendly_module_not_found_error/: __init__.py  handle_path.py  idlelib_all_change.py  runpy_change.py  traceback_change.py
friendly_module_not_found_error/wrong_module/: __init__.py
monkey_patch/: __init__.py
src/friendly_module_not_found_error/: __init__.py  __main__.py  handle_path.py  idlelib_all_change.py  importlib_change.py  runpy_change.py  traceback_change.py
src/friendly_module_not_found_error/wrong_child_module/wrong_child_module/: __init__.py
src/friendly_module_not_found_error/wrong_module/: __init__.py
test/: test.py
